# transfers

./: .clang-tidy.in  .pkg  CMakeLists.txt  README.md
.github/workflows/: unix.yml  windows.yml
cmake/: pkg.cmake
docs/: import.drawio  storage.drawio
include/transfers/: types.h
include/transfers/matching/: by_distance.h  matcher.h
include/transfers/platform/: extract.h  from_osm.h  platform.h  platform_index.h  to_ppr.h
include/transfers/storage/: database.h  storage.h  to_nigiri.h  updater.h
include/transfers/transfer/: transfer_request.h  transfer_result.h
src/matching/: by_distance.cc  matcher.cc
src/platform/: extract.cc  from_osm.cc  platform.cc  platform_index.cc  to_ppr.cc
src/storage/: database.cc  storage.cc  to_nigiri.cc  updater.cc
src/transfer/: transfer_request.cc  transfer_result.cc
test/: keys_test.cc  main.cc  merge_test.cc
